--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body, html{
   height: 100%;
 }
 .bg{
-  background-image: url(https://i.imgur.com/Rwrbnto.jpg);
+  /*background-image: url(https://i.imgur.com/Rwrbnto.jpg);*/
+  background-color: #46608c;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
