--- a/style.css
+++ b/style.css
@@ -45,6 +45,37 @@ body, html{
         -0.07em 0 black,
         0 -0.07em black;
 }
+#searchField{
+  border: 1px solid #000000;
+  outline: none;
+  padding-left: 4px;
+  padding-right: 4px;
+  -webkit-border-bottom-left-radius: 5px;
+  -webkit-border-top-left-radius: 5px;
+  -moz-border-top-left-radius: 5px;
+  -moz-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+#searchButton{
+  border: 1px solid #000000;
+  background;
+  cursor: pointer;
+  font-size: 13px;
+  padding-left: 4px;
+  padding-right: 4px;
+  outline: none;
+  -webkit-border-bottom-right-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-top-right-radius: 5px;
+  -moz-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+#searchButton:hover{
+  background: white;
+  cursor: pointer;
+}
 .name{
   box-shadow: inset 0px 0px 0px 1000px #404040;
   font-size: 30px;
