--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
-a { color:white } /* Globally */
-
-/* Each state */
-
-a:visited { text-decoration: none; color:white; }
-a:hover { text-decoration: none; color:white; }
-a:focus { text-decoration: none; color:white; }
-a:hover, a:active { text-decoration: none; color:white }
+a {
+  text-decoration: none;
+  color: white;
+    text-shadow:
+        0.07em 0 black,
+        0 0.07em black,
+        -0.07em 0 black,
+        0 -0.07em black;
+  } /* Globally */
 
 .bg{
   background-color: #46608c;
@@ -13,6 +14,35 @@ a:hover, a:active { text-decoration: none; color:white }
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.links{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+  font-size: 24px;
+  box-shadow: inset 0px 0px 0px 1000px #5599cc;
+}
+.home{
+  box-shadow: inset 0px 0px 0px 1000px #46608c;
+  padding: 5px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.XIV{
+  box-shadow: inset 0px 0px 0px 1000px #46608c;
+  padding: 5px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.about{
+  box-shadow: inset 0px 0px 0px 1000px #46608c;
+  padding: 5px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 .weather-container{
@@ -35,7 +65,7 @@ a:hover, a:active { text-decoration: none; color:white }
   right: calc(50% - 52px);
 }
 #xivapi-container{
-  background-image: url(https://i.imgur.com/bscjsyW.jpg);
+  background-image: url(https://i.imgur.com/BV69X4K.jpg);
   background-color: #ccc;
   background-position: center;
   background-repeat: no-repeat;
@@ -128,7 +158,7 @@ a:hover, a:active { text-decoration: none; color:white }
 }
 
 /*If browser window width too thin*/
-@media (max-width: 1080px) {
+@media (max-width: 900px) {
   .bg {
     background-color: #2D3D5A;
   }
