--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  text-align: center;
 }
 .links{
   display: flex;
@@ -59,6 +60,33 @@ a {
   font-weight: bold;
 }
 
+.search-container{
+  background-color: #404040;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  color: white;
+    font-size: 20px;
+    text-shadow:
+        0.07em 0 black,
+        0 0.07em black,
+        -0.07em 0 black,
+        0 -0.07em black;
+}
+.googleTitle{
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+.searchBar{
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
 /*xivapi*/
 .xivapiURL{
   position: relative;
@@ -91,6 +119,21 @@ a {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
+#googleSearchField{
+  border: 1px solid #000000;
+  background;
+  outline: none;
+  -webkit-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border-radius: 5px;
+  width: calc(100%/3);
+  height: 32px;
+  margin: auto;
+  text-align: center;
+}
 #searchButton{
   border: 1px solid #000000;
   background;
@@ -106,7 +149,33 @@ a {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
+.googleSearchButton{
+  margin: auto;
+  padding-top: 8px;
+  padding-bottom: 2px;
+}
+#googleSearchButton{
+  border: 1px solid #000000;
+  background: #F4F4F4;
+  cursor: pointer;
+  outline: none;
+  -webkit-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border-radius: 5px;
+  height: 36px;
+  width: 128px;
+  margin: auto;
+  color: #5F6368;
+  font-size: 16px;
+}
 #searchButton:hover{
+  background: white;
+  cursor: pointer;
+}
+#googleSearchButton:hover{
   background: white;
   cursor: pointer;
 }
@@ -248,6 +317,9 @@ a {
 @media (max-width: 1080px) {
   .bg {
     /*background-color: #2D3D5A;*/
+  }
+  #googleSearchField{
+    width: 300px;
   }
   .characterInfoRow{
     flex-wrap: wrap;
